chore(frontend): istio config编辑页面样式优化

--- a/frontend/src/pages/IstioConfigDetails/IstioConfigDetailsPage.scss
+++ b/frontend/src/pages/IstioConfigDetails/IstioConfigDetailsPage.scss
@@ -35,3 +35,9 @@ div.ace_gutter-cell.ace_info {
     position: absolute;
   }
 }
+
+.istio-config-details-page {
+  .pf-c-tabs__list {
+    width: 100%;
+  }
+}
